Remove 'save actions' text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Save actions</string>
+    <string name="action_settings"></string>
 
     <string name="action_save">Save current record</string>
     <string name="action_delete">Delete current record</string>
